2011-07-10  Tim Retout  <diocles@gnu.org>

	* states/hl/mail.st: Support extended mail headers.
	Savannah bug #25440.

	* src/main.c (usage): Clarify documentation for short forms of
	optional arguments.

2011-07-09  Tim Retout  <diocles@gnu.org>

	* src/main.c (handle_options): Add missing 'w' from
	getopt_long call. Savannah bug #30651.

	Apply patch 393791-sliceprint from Debian:
	* scripts/sliceprint.1: Complete documentation.
	* scripts/sliceprint.in: Force C locale.
	Use more liberal regexp when parsing wrapped lines message.
	Add missing space from before args. Savannah bug #31259.

	* Makefile.am (SUBDIRS): Move intl to be built before compat.

	* states/Makefile.am: Use $(datadir) instead of $(prefix)/share.
	  Savannah bug #31609.
	* src/Makefile.am: Likewise.

	* src/Makefile.am: Remove ansi2knr option and supporting files.
	* afmlib/Makefile.am: Likewise.

	* states/utils.c (eval_expr): Fix typo in error string.
	* states/main.c (usage): Fix typo in --define usage string.

2010-06-02  Tim Retout  <diocles@gnu.org>

	Fix Savannah bug #28769 (segfault when parsing config file).

	* src/util.c (CFG_FATAL): Call buffer_ptr on &fname to get
	configuration filename.
	* src/util.c (read_config): Delay buffer_uninit call on fname
	until return points.

2010-03-17  Juergen Daubert  <jue@jue.li>
	* src/main.c: Fix ngettext calls to use '1' explicitly.  Fixes
	Savannah bug #29198.

2010-03-07  Tim Retout  <diocles@gnu.org>

	* src/gsint.h: Remove version_string and ps_version_string.
	* src/main.c: Likewise.
	* src/main.c (version): Update copyright and licensing
	information. Use autoconf variables instead of hardcoded strings.
	* src/main.c (usage): Add angle brackets around bug address.
	* src/psgen.c (dump_ps_header): Set ps_version_string here.

2010-03-06  Tim Retout  <diocles@gnu.org>

	* configure.ac: Set version to 1.6.5.1.

	* states/hl/Makefile.am (highlightings): Add f90.st.

	* INSTALL: Move enscript-specific details into README, and remove